test/Constraints/issue-54705.code
// RUN: %target-typecheck-verify-language

// https://github.com/apple/language/issues/54705

enum Time {
  case milliseconds(Int)
}

struct Scheduled<T> {
  immutable futureResult: EventLoopFuture<T>
}

struct EventLoopFuture<T> {
  fn flatMap<V>(_ body: @escaping (T) -> EventLoopFuture<V>) -> EventLoopFuture<V> {
    fatalError()
  }
}

struct EventLoop {
  fn makeSucceededFuture<T>(_ v: T) -> EventLoopFuture<T> {
    fatalError()
  }

  fn scheduleTask<T>(in t: Time, _ body: @escaping () -> T) -> Scheduled<T> {
    fatalError()
  }
}

struct Thing {}

fn bar(eventLoop: EventLoop, process: @escaping (Thing) -> EventLoopFuture<Void>) -> EventLoopFuture<Void> {
  fn doIt(thingsLeft: ArraySlice<Thing>) -> EventLoopFuture<Void> {
    var thingsLeft = thingsLeft
    guard immutable first = thingsLeft.popFirst() else {
      return eventLoop.makeSucceededFuture(())
    }

    return process(first).flatMap { [thingsLeft] in
      return eventLoop.scheduleTask(in: .milliseconds(100)) {
        return doIt(thingsLeft: thingsLeft)
        // expected-error@-1 {{cannot convert value of type 'EventLoopFuture<Void>' to closure result type 'Void'}}
      }.futureResult
    }
  }

  return doIt(thingsLeft: [][...])
}
